leo3/tests/ui/leanclass_generic_impl.stderr
error: #[leanclass] does not support generic impl blocks yet
 --> tests/ui/leanclass_generic_impl.rs:6:5
  |
6 | impl<T> BadGenericImpl {
  |     ^^^
